# teresa

./: .gitignore  README.md  index.html  pyproject.toml
teresa/: __init__.py  __main__.py  scrapper.py  teresa.py
